# vent

./: Cargo.toml  vent.code-workspace
kora/: Makefile  pad.py  payload.S  payload.ld
src/: error.rs  eventfd.rs  lib.rs  main.rs
src/configuration/: machine.rs  mod.rs
src/device/: cmos.rs  mod.rs
src/device/debug/: e9.rs  mod.rs  sconsole.rs
src/device/pci/: address.rs  host.rs  mod.rs
src/device/virtio/: console.rs  mod.rs
src/instance/: device.rs  mod.rs  notify.rs
src/kvm/: capabilities.rs  mod.rs
src/kvm/core/: mod.rs  run.rs  state.rs
src/kvm/machine/: ioeventfd.rs  memory.rs  mod.rs
src/kvm/sys/: capabilities.rs  functions.rs  mod.rs  run.rs  structs.rs  x86.rs
src/kvm/system/: mod.rs
src/machine/: bios.rs  core.rs  device.rs  e9.rs  mod.rs
src/machine/acpi/: mod.rs  rsdp.rs
src/pci/: configuration.rs  host.rs  invalid.rs  mod.rs
src/virt/: action.rs  instance.rs  mod.rs
src/virt/device/: mod.rs
src/virtio/: caps.rs  mod.rs
