[package]
name = "vent"
version = "0.1.0"
authors = ["Jeremy Rodi <me@medcat.me>"]
license = "MIT"
description = "create, manage, and maintain virtual machines"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
nix = "0.10"
error-chain = "0.11.0"
uuid = { version = "0.6", features = ["serde", "v4", "v5"] }
kvm-sys = { path = "../kvm-sys", version = "0.1.0" }
tokio = "0.1"
byteorder = "1"
