[package]
name = "vent"
version = "0.1.0"
authors = ["Jeremy Rodi <me@medcat.me>"]
license = "MIT"
description = "create, manage, and maintain virtual machines"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
nix = "0.10"
error-chain = "0.11.0"
uuid = { version = "0.6", features = ["serde", "v4", "v5"] }
kvm = { path = "../kvm", version = "0.1.0" }
tokio = "0.1"
futures = "0.1"
mio = "0.6"
byteorder = "1"
bitflags = "1"
log = "0.4"
env_logger = "0.5"
libc = "0.2"
